--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-
-
-
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/progresstracker
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#
+## Enable automatic table creation
+#spring.jpa.hibernate.ddl-auto=create
